--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,5 @@
-asgiref==3.8.1
-Django==5.1.3
+Django==5.1.4
 django-admin-rangefilter==0.13.2
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 Markdown==3.7
-sqlparse==0.5.2
-tzdata==2024.2
